EKS/Spring Boot/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot-jwt
  labels:
    name: springboot-jwt
